@@ -1,0 +1,7 @@
+
+plugin_LTLIBRARIES = libgstvideorate.la
+
+libgstvideorate_la_SOURCES = gstvideorate.c
+libgstvideorate_la_CFLAGS = $(GST_CFLAGS)
+libgstvideorate_la_LIBADD =
+libgstvideorate_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
